--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -15,5 +15,5 @@
      limitations under the License.
 -->
 <resources>
-    <color name="primaryDark">#1F1D2B</color>
+    <color name="ic_launcher_background">#1F1D2B</color>
 </resources>
